--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html>
     <h1>Pam's Portfolio</h1>
-    <img src="./img_4027.jpg" />
+    <img src="http://ahundrepercentpam.github.io/img_4027.jpg" 
+    width = "400"
+    height = "500"/>
 </html>
