--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <h1>Pam's Portfolio</h1>
-    <img src="http://ahundrepercentpam.github.io/img_4027.jpg" 
+    <img src="https://github.com/ahundredpercentpam/ahundredpercentpam.github.io/blob/main/IMG_4027.jpg?raw=true" 
     width = "400"
     height = "500"/>
 </html>
