--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <img src="IMG_4027.jpg" 
     width = "400"
     height = "500"/>
-    <a href="https://ahundredpercentpam.github.io/helloworld.html">Hello World!</a>
+    <a href="https://ahundredpercentpamahundredpercentpam
+    /
+    helloworld/index.html">Hello World!</a>
 </html>
 
