--- a/helloworld.html
+++ b/helloworld.html
@@ -1,6 +1,10 @@
+<>
+    <h1>When is the last time you jumped for joy?</h1><br>
+    <img src="IMG_4027.jpg" 
+    width = "400"
+    height = "500"/><br>
+    <a href="https://ahundredpercentpam/helloworld/index.html">Hello World!</a><br>
+    <a href="https://www.superbad.com">My favorite simple HTML website from the 90s is still up.</a><br>
+    <h2>I had a lot of fun working out how to do all this.</h2><br><p>Imagine a lot of lovely prose right here.</p>
 </html>
-<h1> <p style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
-Hello World!</style>
-<img src="cambridge-skyline.jpeg">
-<a href="https://ahundredpercentpam.github.io/index.html">Go back home</a>
-</h1>
+
