--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <img src="IMG_4027.jpg" 
     width = "400"
     height = "500"/><br>
-    <a href="https://ahundredpercentpam/helloworld/index.html">Hello World!</a><br>
+    <a href="https://ahundredpercentpam.github.io/helloworld.html">Hello World!</a><br>
     <a href="https://www.superbad.com">My favorite simple HTML website from the 90s is still up.</a><br>
     <h2>I had a lot of fun working out how to do all this.</h2><br><p>Imagine a lot of lovely prose right here.</p>
 </html>
